# qml-example

./: CMakeLists.txt  README.md
cmake/: FindQt6.cmake
src/: CMakeLists.txt  main.cpp
